Expressions and operators

--- a/index.html
+++ b/index.html
@@ -4,28 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Базова структура</title>
+    <title>Оператори та вирази</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Основні елементи HTML</h3>
-    <ol>
-        <li>Теги</li>
-        <li>Атрибути</li>
-        <li>Контент(текст та інші теги)</li>
-    </ol>
-    <h3>Основні елементи CSS</h3>
-    <ol>
-        <li>Селектор</li>
-        <li>Правило</li>
-        <li>Властивість : значення</li>
-    </ol>
-    <h3>Основні елементи JS</h3>
-    <ol>
-        <li>Дані</li>
-        <li>Конструкції/команди</li>
-    </ol>
-    <input type="text" autofocus>
+    
     <script src="main.js"></script>
     
 </body>
