--- a/index.html
+++ b/index.html
@@ -8,25 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Основні елементи HTML</h3>
-    <ol>
-        <li>Теги</li>
-        <li>Атрибути</li>
-        <li>Контент(текст та інші теги)</li>
-    </ol>
-    <h3>Основні елементи CSS</h3>
-    <ol>
-        <li>Селектор</li>
-        <li>Правило</li>
-        <li>Властивість : значення</li>
-    </ol>
-    <h3>Основні елементи JS</h3>
-    <ol>
-        <li>Дані</li>
-        <li>Конструкції/команди</li>
-    </ol>
-    <input type="text" autofocus>
     <script src="main.js"></script>
-    
+    <script src="obj.js"></script>
 </body>
 </html>
