--- a/index.html
+++ b/index.html
@@ -8,24 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Основні елементи HTML</h3>
-    <ol>
-        <li>Теги</li>
-        <li>Атрибути</li>
-        <li>Контент(текст та інші теги)</li>
-    </ol>
-    <h3>Основні елементи CSS</h3>
-    <ol>
-        <li>Селектор</li>
-        <li>Правило</li>
-        <li>Властивість : значення</li>
-    </ol>
-    <h3>Основні елементи JS</h3>
-    <ol>
-        <li>Дані</li>
-        <li>Конструкції/команди</li>
-    </ol>
-    <input type="text" autofocus>
+
+    <div class="inputs">
+        <input type="number" class="inp_a" placeholder="33">
+        <input type="number" class="inp_b" placeholder="22">
+        <button class="btn_count">Count</button>
+    </div>
+    <h4>Площа = <span class="answer"></span></h4>
     <script src="main.js"></script>
     
 </body>
