--- a/index.html
+++ b/index.html
@@ -8,25 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>Основні елементи HTML</h3>
-    <ol>
-        <li>Теги</li>
-        <li>Атрибути</li>
-        <li>Контент(текст та інші теги)</li>
-    </ol>
-    <h3>Основні елементи CSS</h3>
-    <ol>
-        <li>Селектор</li>
-        <li>Правило</li>
-        <li>Властивість : значення</li>
-    </ol>
-    <h3>Основні елементи JS</h3>
-    <ol>
-        <li>Дані</li>
-        <li>Конструкції/команди</li>
-    </ol>
-    <input type="text" autofocus>
+    <h2>LocalStorage: <span class="counter"></span></h2>
+    <a href="./secondPage.html">second page</a>
+    <button class="open">Open</button>
+    <button class="openInThisWindow">Open in this window</button>
+
     <script src="main.js"></script>
-    
 </body>
 </html>
