add google parsing

--- a/index.html
+++ b/index.html
@@ -6,26 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Базова структура</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://so2niko.github.io/libs/google-sheets.js"></script>
 </head>
 <body>
-    <h3>Основні елементи HTML</h3>
-    <ol>
-        <li>Теги</li>
-        <li>Атрибути</li>
-        <li>Контент(текст та інші теги)</li>
-    </ol>
-    <h3>Основні елементи CSS</h3>
-    <ol>
-        <li>Селектор</li>
-        <li>Правило</li>
-        <li>Властивість : значення</li>
-    </ol>
-    <h3>Основні елементи JS</h3>
-    <ol>
-        <li>Дані</li>
-        <li>Конструкції/команди</li>
-    </ol>
-    <input type="text" autofocus>
     <script src="main.js"></script>
     
 </body>
